--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
           <span class="badge bg-primary rounded-pill">3</span>
         </h4>
         <ul class="list-group mb-3">
-          <li class="list-group-item d-flex justify-content-between lh-sm">
+          <li class="list-group-item d-flex justify-content-between lh-sm">  
+            <img src="Images/Sofa Sectional.PNG" alt="sofa" class="thumbnail">
             <div>
               <h6 class="my-0">Eufaula87” Genuine Leather Rolled Arm Chesterfield Sofa</h6>
               <small class="text-muted">by Birch Lane</small>
-            </div>
+            </div>          
             <span class="text-muted">$700</span>
           </li>
-          <li class="list-group-item d-flex justify-content-between lh-sm">
+          <li class="list-group-item d-flex justify-content-between lh-sm"> 
+            <img src="Images/Coffee Table.PNG" alt="Coffee table" class="thumbnail">
             <div>
               <h6 class="my-0">Southside Frame Single Coffee Table with Storage
             </h6>
@@ -74,6 +76,7 @@
             <span class="text-muted">$200</span>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-sm">
+            <img src="Images/Rug.PNG" alt="rug" class="thumbnail">
             <div>
               <h6 class="my-0">Taravello Oriental Light Grey / Blue Area Rug
             </h6>
