Changed Sofa sectional

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h2>Checkout Form</h2>
       <!--<p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p> -->
     </div>
-
+<!-- Your Cart -start-->
     <div class="row g-5">
       <div class="col-md-5 col-lg-4 order-md-last">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -59,10 +59,10 @@
         </h4>
         <ul class="list-group mb-3">
           <li class="list-group-item d-flex justify-content-between lh-sm">  
-            <img src="Images/Sofa Sectional.PNG" alt="sofa" class="thumbnail">
+            <img src="Images/SofaSectional.jpg" alt="sofa" class="thumbnail">
             <div>
-              <h6 class="my-0">Eufaula87” Genuine Leather Rolled Arm Chesterfield Sofa</h6>
-              <small class="text-muted">by Birch Lane</small>
+              <h6 class="my-0">Ledyard Faux Leather Reversible Sofa & Chaise with Ottoman</h6>
+              <small class="text-muted">by Zipcode Design™</small>
             </div>          
             <span class="text-muted">$700</span>
           </li>
@@ -122,6 +122,10 @@
           </div>
         </form>
       </div>
+<!-- Your Cart -end-->
+
+<!-- Billing Address -start-->
+
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Billing address</h4>
         <form class="needs-validation" novalidate>
@@ -218,6 +222,10 @@
           </div>
 
           <hr class="my-4">
+<!-- Billing Address -end-->
+
+<!-- Payment-start-->
+
 
           <h4 class="mb-3">Payment</h4>
 
@@ -273,13 +281,16 @@
           </div>
 
           <hr class="my-4">
+<!-- Payment-end-->
 
+<!-- Button -->
           <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
         </form>
       </div>
     </div>
   </main>
 
+<!-- Footer -->
   <footer class="my-5 pt-5 text-muted text-center text-small">
     <p class="mb-1">&copy; 2017–2021 Wayfair</p>
     <ul class="list-inline">
