--- a/Checkout-Confirmation.html
+++ b/Checkout-Confirmation.html
@@ -5,6 +5,11 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
+  <div class="w3-container">
+    <h2>W3.CSS Animated Modal</h2>
+    <p>Zoom in the modal with the w3-animate-zoom class, or slide in the modal from a specific direction using the w3-animate-top, w3-animate-bottom, w3-animate-left or w3-animate-right class:</p>
+    <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Animated Modal</button>
+
 <!--Modal Overlay - start-->
   <div id="id01" class="w3-modal">
     <div class="w3-modal-content w3-animate-top w3-card-4">
