Added CheckoutConfirmation page

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
           <hr class="my-4">
 
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="same-address">
-            <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
+            <input type="checkbox" class="form-check-input" id="same-address" checked>
+            <label class="form-check-label" for="same-address" >Shipping address is the same as my billing address</label>
           </div>
 
           <div class="form-check">
@@ -277,7 +277,7 @@
               <input type="text" class="form-control" id="cc-cvv" placeholder="" required="123">
               <div class="invalid-feedback">
                 Security code required 
-                <p style="color: grey; font-size: 10px;!important">(Demo hint: Enter 123 )</p>
+                <p style="color: grey; font-size: 10px;">(Demo hint: Enter 123 )</p>
               </div>
             </div>
           </div>
