finalized Checkout Review page

--- a/CheckoutReview.html
+++ b/CheckoutReview.html
@@ -168,11 +168,14 @@
                     </div>                
                 </div>
             </div>
+        </div>
+    </div>
+  </main>
     
 
 
 <!-- Footer -->
-  <footer class="my-5 pt-5 text-muted text-center text-small">
+  <footer class="my-5 pt-5 text-muted text-center text-small ">
     <p class="mb-1">&copy; 2017–2021 Wayfair</p>
     <ul class="list-inline">
       <li class="list-inline-item"><a href="#">Privacy</a></li>
