Added checkout review and confirmation pages

--- a/index.html
+++ b/index.html
@@ -286,7 +286,9 @@
 <!-- Payment-end-->
 
 <!-- Button -->
-          <button onclick="document.getElementById('id01').style.display='block'" class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+          <button onclick="document.getElementById('id01').style.display='block'" class="w-100 btn btn-primary btn-lg" type="submit">
+            Continue to checkout
+            </button>
         </form>
       </div>
     </div>
@@ -335,6 +337,7 @@
       });
     }, false);
   })();
+
   </script>
 
 <!-- Footer -->
