Linked all the checkout pages!

--- a/CheckoutReview.html
+++ b/CheckoutReview.html
@@ -119,10 +119,10 @@
 
         </ul>
 
-        <form class="card p-2">
+        <form class="card p-2" action="CheckoutConfirmation.html">
           <div class="input-group">
             <!--input type="text" class="form-control" placeholder="Promo code"-->
-            <button class="w-100 btn btn-primary btn-lg" type="submit">Place Your Order</button>
+            <button class="w-100 btn btn-primary btn-lg" type="submit" onclick="">Place Your Order</button>
           </div>
         </form>
       </div>
