--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Billing address</h4>
-        <form class="needs-validation" novalidate>
+        <form class="needs-validation" action="CheckoutReview.html" novalidate>
           <div class="row g-3">
             <div class="col-sm-6">
               <label for="firstName" class="form-label" >First name</label>
@@ -336,8 +336,9 @@
       });
     }, false);
   })();
-
   </script>
+
+  
 
 <!-- Footer -->
   <footer class="my-5 pt-5 text-muted text-center text-small">
